--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,18 +50,25 @@ section{
     border-radius: 0px !important;
 }
 button.more_work {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+@media only screen and (min-width: 768px) {
+    button.more_work {
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        bottom: 60px;
+    }
+}
+/* button.more_skills {
     position: absolute;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
     bottom: 60px;
-}
-button.more_skills {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    bottom: 60px;
-}
+} */
