--- a/assets/css/ScrolldownButton.css
+++ b/assets/css/ScrolldownButton.css
@@ -14,9 +14,9 @@ button.scroll_down {
     margin-right: auto;
     /* left: 0; */
     right: 46px;
+    bottom: 46px;
     height: 50px;
     width: 30px;
-    bottom: 54%;
     background-color: transparent;
     border: 2px solid white;
     border-radius: 20px;
