--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,74 +1,6 @@
+@import './base.css';
+@import './ui.css';
+@import './btn.css';
+@import './uk-tm.css';
 @import './ScrolldownButton.css';
-@import './uk.css';
-
-body{
-    /* scroll-snap-type: y mandatory;
-    overflow-y: scroll; */
-    overflow-x: hidden;
-}
-/* .PT{
-    padding-top: 20%;
-} */
-.blackBack{
-    background: url('../../img/BlackBack.jpg');
-    background-size: cover;
-    overflow-x: hidden;
-}
-.projectBack{
-    background: url('../../img/blackJoe.jpg');
-    background-size: cover;
-    background-position: center;
-    overflow-x: hidden;
-}
-.uk-list, li {
-    color: orange;
-}
-section{
-    scroll-snap-align: center;
-    min-height: 100vh;
-    /* css smouth scroll */
-    scroll-behavior: smooth;
-}
-.halfSection{
-    /* height: 50vh; */
-    min-height: 50vh;
-}
-.Grey {
-    background: #F8F8F8;
-}
-.white {
-    background: rgb(255, 255, 255);
-}
-.black{
-    color: black;
-}
-.blacktoGery{
-    background: linear-gradient(black,#f8F8F8)
-}
-
-.noBorderRadius {
-    border-radius: 0px !important;
-}
-button.more_work {
-    position: relative;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-@media only screen and (min-width: 768px) {
-    button.more_work {
-        position: absolute;
-        margin-left: auto;
-        margin-right: auto;
-        left: 0;
-        right: 0;
-        bottom: 60px;
-    }
-}
-/* button.more_skills {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    bottom: 60px;
-} */
+@import './media.css';
