fix bug: js timing on load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,5 @@
 @import './ui.css';
 @import './btn.css';
 @import './uk-tm.css';
-@import './ScrolldownButton.css';
+/* @import './ScrolldownButton.css'; */
 @import './media.css';
