--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,8 +1,8 @@
-<section id="contact" class="border-top pt-4 bg-black-img">
+<section id="contact" class="border-top pt-4 bg-black-img animated reveal">
     <div class="container">
         <div class="row pt-5">
             <!-- personal info  -->
-            <div class="col-md-4 animated slideRight1">
+            <div class="col-md-4">
                 <div class="pb-2 mb-3">
                     <img
                         src="https://avatars0.githubusercontent.com/u/26075149?s=460&v=4"
