--- a/assets/css/ui.css
+++ b/assets/css/ui.css
@@ -5,11 +5,32 @@ section{
     scroll-behavior: smooth;
 }
 section#intro {
-    min-height: 70vh;
+    min-height: 95vh;
 }
-
+section#intro > .bg-black-img, section#intro > .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+section#intro > .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(16,16,16,0) 0%, rgba(16,16,16,0.9) 60%, #101010 90%);
+}
+section#work {
+    min-height: 50vh;
+    background: #101010;
+}
 section#skills {
     min-height: 50vh;
+}
+section#contact {
+    background: #101010;
 }
 .halfSection{
     min-height: 50vh;
