--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,4 +1,4 @@
-<section id="contact" class="border-top pt-4 bg-black-img animated reveal">
+<section id="contact" class="border-top pt-4 animated reveal">
     <div class="container">
         <div class="row pt-5">
             <!-- personal info  -->
@@ -38,7 +38,7 @@
             </div>
             <!-- contact me -->
             <div class="slideLeft2 col-md-8 mb-4">
-                <h3 class="border-top">Contact Me</h3>
+                <h3>Contact Me</h3>
                 <!-- Email Form and address -->
                 <form
                     action="https://formcarry.com/s/v0Z3vC5PTtY"
