--- a/layout/footer.html
+++ b/layout/footer.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <!-- contact me -->
-            <div class="slideLeft2 col-md-8 mb-4">
+            <div class="col-md-8 mb-4">
                 <h3>Contact Me</h3>
                 <!-- Email Form and address -->
                 <form
