--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,10 +1,3 @@
-body {
-    /* scroll-snap-type: y mandatory; */
-    overflow-y: scroll;
-    overflow-x: hidden;
-    /* font-family: alata; */
-}
-
 body,
 h1,
 h2,
@@ -13,4 +6,5 @@ h4,
 h5, 
 p {
     font-family: alata;
+    position: relative;
 }
