--- a/assets/css/ui.css
+++ b/assets/css/ui.css
@@ -1,26 +1,25 @@
-section{
-    scroll-snap-align: center;
-    min-height: 100vh;
-    /* css smouth scroll */
-    scroll-behavior: smooth;
-}
 section#intro {
-    min-height: 95vh;
+    min-height: 90vh;
+    overflow: hidden;
+    position: relative;
+    padding-top: 25vh;
 }
-section#intro > .bg-black-img, section#intro > .overlay {
+section#intro > .bg-black-img, section#intro > .overlay{
     position: absolute;
+    width: 100%;
+    height: 90vh;
+}
+section#intro > .bg-black-img{
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    background: url('../../assets/img/BlackBack.jpg');
+    object-fit: cover;
+    background-size: cover;
 }
 section#intro > .overlay {
-    position: absolute;
-    top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(16,16,16,0) 0%, rgba(16,16,16,0.9) 60%, #101010 90%);
+    bottom: 0;
+    background: linear-gradient(rgba(16,16,16,0) 0%, #101010d7 60%, #101010 100%);
 }
 section#work {
     min-height: 50vh;
@@ -31,14 +30,10 @@ section#skills {
 }
 section#contact {
     background: #101010;
+    min-height: 100vh;
 }
 .halfSection{
     min-height: 50vh;
-}
-.bg-black-img{
-    background: url('../../assets/img/BlackBack.jpg');
-    background-size: cover;
-    overflow-x: hidden;
 }
 .bg-grey {
     background: #F8F8F8;
@@ -57,5 +52,5 @@ section#contact {
 }
 .animated {
     /* gets overrided by the scroll reveal */
-    visibility: hidden;
+    /* visibility: hidden; */
 }
