webpack js ans sass implementation

--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,14 +1,12 @@
-<section id="contact" class="border-top pt-4 animated reveal">
+<section id="contact" class="pt-4 animated reveal">
     <div class="container">
         <div class="row pt-5">
             <!-- personal info  -->
             <div class="col-md-4">
                 <div class="pb-2 mb-3">
-                    <img
-                        src="https://avatars0.githubusercontent.com/u/26075149?s=460&v=4"
+                    <img src="https://avatars0.githubusercontent.com/u/26075149?s=460&v=4"
                         class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
-                        alt=""
-                    />
+                        alt="" />
                 </div>
                 <div class="mb-auto pb-2 mb-3">
                     <div class="uk-text-center text-white">
@@ -40,64 +38,29 @@
             <div class="col-md-8 mb-4">
                 <h3>Contact Me</h3>
                 <!-- Email Form and address -->
-                <form
-                    action="https://formcarry.com/s/v0Z3vC5PTtY"
-                    method="post"
-                    accept-charset="UTF-8"
-                >
+                <form action="https://formcarry.com/s/v0Z3vC5PTtY" method="post" accept-charset="UTF-8">
                     <div class="form-group">
                         <label for="">
                             <i class="fa fa-bullseye" aria-hidden="true"></i>
-                            Name</label
-                        >
-                        <input
-                            class="uk-input"
-                            type="text"
-                            name="name"
-                            id="name"
-                            aria-describedby="helpId"
-                            placeholder="your name goes here..."
-                            required
-                        />
+                            Name</label>
+                        <input class="uk-input" type="text" name="name" id="name" aria-describedby="helpId"
+                            placeholder="your name goes here..." required />
                     </div>
                     <div class="form-group">
                         <label for="">
                             <i class="fa fa-at" aria-hidden="true"></i>
-                            Email</label
-                        >
-                        <input
-                            class="uk-input"
-                            type="text"
-                            name="email"
-                            id="email"
-                            aria-describedby="helpId"
-                            placeholder="your email goes here..."
-                            required
-                        />
+                            Email</label>
+                        <input class="uk-input" type="text" name="email" id="email" aria-describedby="helpId"
+                            placeholder="your email goes here..." required />
                     </div>
                     <div class="form-group">
                         <label for="messageText">
-                            <i
-                                class="fa fa-envelope-open"
-                                aria-hidden="true"
-                            ></i>
-                            Message</label
-                        >
-                        <textarea
-                            class="uk-textarea"
-                            name="message"
-                            id="message"
-                            rows="4"
-                            placeholder="Message goes here..."
-                            required
-                        ></textarea>
+                            <i class="fa fa-envelope-open" aria-hidden="true"></i>
+                            Message</label>
+                        <textarea class="uk-textarea" name="message" id="message" rows="4"
+                            placeholder="Message goes here..." required></textarea>
                     </div>
-                    <button
-                        type="submit"
-                        name=""
-                        id=""
-                        class="uk-button uk-button-default-warning btn-block"
-                    >
+                    <button type="submit" name="" id="" class="uk-button uk-button-default-info btn-block">
                         <i class="fa fa-paper-plane" aria-hidden="true"></i>
                         Send
                     </button>
@@ -106,26 +69,20 @@
                 <h5 class="my-2">More Links</h5>
                 <ul class="uk-list">
                     <li>
-                        <a
-                            href="https://www.github.com/abayoss"
-                            target="#"
-                            class="uk-button uk-button-default btn-block text-white"
-                        >
+                        <a href="https://www.github.com/abayoss" target="#"
+                            class="uk-button uk-button-default btn-block text-white">
                             <i class="fa fa-github" aria-hidden="true"></i>
                             Github
                         </a>
                     </li>
                     <li>
-                        <a
-                            href="http://linkedin.com/in/oussama-abaayous/"
-                            target="#"
-                            class="uk-button uk-button-default btn-block text-white"
-                        >
+                        <a href="http://linkedin.com/in/oussama-abaayous/" target="#"
+                            class="uk-button uk-button-default btn-block text-white">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             Linkedin
                         </a>
                     </li>
-<!--                     <li>
+                    <!--                     <li>
                         <a
                             class="uk-button uk-button-default btn-block text-white"
                             href="https://docs.google.com/document/d/1m6yDTt4siwRSnCA-vjilGqYO72vHRz3uqFZfw2lchuo"
