--- a/src/sass/ScrolldownButton.scss
+++ b/src/sass/ScrolldownButton.scss
@@ -14,7 +14,7 @@ button.scroll_down {
     margin-right: auto;
     /* left: 0; */
     right: 46px;
-    bottom: 46px;
+    bottom: 20%;
     height: 50px;
     width: 30px;
     background-color: transparent;
