--- a/layout/nav.html
+++ b/layout/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <a class="navbar-brand ml-4" href="#">
     <img src="assets/img/SVG/ab_Logo_White.svg" width="30" height="30" alt="" />
   </a>
@@ -24,7 +24,7 @@
         >
       </li> -->
       <li class="nav-item">
-        <a class="uk-button uk-button-default-warning" href="#contact" style="width: 100%;"
+        <a class="nav-link active" href="#contact" style="width: 100%;"
           >Contact Me</a
         >
       </li>
