point on docs only

--- a/src/sass/ui.scss
+++ b/src/sass/ui.scss
@@ -1,6 +1,8 @@
 section {
     background: #101010;
-
+    & > div {
+        overflow: hidden;
+    }
     &#intro {
         min-height: 120vh;
         overflow: hidden;
