--- a/src/sass/ui.scss
+++ b/src/sass/ui.scss
@@ -1,6 +1,6 @@
 section {
     background: #101010;
-    & > div {
+    & > .container {
         overflow: hidden;
     }
     &#intro {
@@ -36,8 +36,29 @@ section {
     &#work {
         min-height: 50vh;
     }
-    &#skills {
+    &#skill {
         min-height: 50vh;
+        position: relative;
+        overflow: hidden;
+        & > .bg-skills-img {
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            bottom: 0;
+            left: 0;
+            background: url('https://images.unsplash.com/photo-1596634371497-1abd0cfbbd60?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1918&q=80');
+            object-fit: cover;
+            background-size: cover;
+            filter: brightness(0.5) hue-rotate(1041deg);
+        }
+        & > .bg-skills-overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgb(11 8 37 / 38%) 0%, #131c8685 70%);
+        }
     }
     &#contact {
         min-height: 100vh;
