contact maserati bg

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
 @import './base.scss';
 // @import './components/ScrolldownButton.scss';
 @import './uk-tm.scss';
-@import './ui.scss';
+// @import './ui.scss';
 @import './pages/home.scss';
 @import './media.scss';
