--- a/src/sass/uk-tm.scss
+++ b/src/sass/uk-tm.scss
@@ -48,7 +48,7 @@
 }
 .uk-card-default {
     overflow: hidden;
-    border-radius: 1%;
+    border-radius: 4px;
 }
 .uk-input, .uk-select, .uk-textarea {
     border-radius: 4px;
