--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,9 +1,13 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body,
 h1,
 h2,
 h3,
 h4,
-h5, 
+h5,
 p {
     font-family: alata;
     position: relative;
